Simplify configuration for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -9,12 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.html",
-      "headers": {
-        "Content-Security-Policy": "frame-src 'self' https://html5.gamemonetize.co/ https://*.gamemonetize.co/;",
-        "X-Frame-Options": "ALLOW-FROM https://html5.gamemonetize.co/",
-        "Access-Control-Allow-Origin": "*"
-      }
+      "dest": "/$1"
     }
   ]
 } 
