--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,12 @@
 {
   "version": 2,
+  "public": true,
+  "cleanUrls": true,
+  "trailingSlash": false,
   "builds": [
     {
-      "src": "*.html",
+      "src": "**",
       "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
     }
   ]
 } 
